--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Meghan Freas</h1>
 
 			<ul>
-				<li><a href="resume.pdf" target="_blank">Resume</a></li>
+				<li><a href="resume.pdf" target="_blank">Resume&#769;</a></li>
 				<li><a href="http://www.megnanimously.com" target="_blank">Blog</a></li>
 				<li><a href="mailto:meghanfreas@gmail.com">Email</a></li>
 			</ul>
@@ -24,11 +24,11 @@
 			<h1>Hi/Hallo!</h1>
 
 			<p>
-				I am Meghan: native Delawarean, biology enthusiast, amateur chef, part-time coder and full-time expat.
+				I'm Meghan: native Delawarean, biology enthusiast, amateur chef, part-time coder and full-time expat.
 			</p>
 
 			<p>
-				In March 2014 I made the move from the USA to Berlin (a city I had never visited) with my husband in search of adventure &amp;	 career opportunities.
+				In March 2014 I made the move from the USA to Berlin (a city I had never visited) with my <a href="http://www.sashimiblade.com" target="_blank">husband</a> in search of adventure &amp;	 career opportunities.
 			</p>
 
 			<p>
@@ -44,7 +44,7 @@
 			</p>
 
 			<p>
-				My work history and interests are varied but all have a common theme: working with people.  
+				My past work experiences are varied but all have a common theme: working with people.  
 			</p>
 
 			<p>
@@ -52,16 +52,16 @@
 			</p>
 
 			<p>
-				If I sound like a good fit for you, please check out my <a href="resume.pdf">resume</a> or send me an <a href="mailto:meghanfreas@gmail.com">email</a>.
+				If I sound like a good fit for you, please check out my <a href="resume.pdf">resume&#769;</a> or send me an <a href="mailto:meghanfreas@gmail.com">email</a>.
 			</p>
 
 			<ul>
-				<li><img src="social_twitter.png" alt="twitter" height="40px" width="40px"></li>
-				<li><img src="social_linkedin.png" alt="linked in" height="40px" width="40px"></li>
-				<li><img src="social_instagram.png" alt="instagram" height="40px" width="40px"></li>
-				<li><img src="social_pinterest.png" alt="pinterest height="40px" width="40px""></li>
-				<li><img src="social_yelp.png" alt="yelp" height="40px" width="40px"></li>
-				<li><img src="social_untappd.png" alt="untappd" height="40px" width="40px"></li>
+				<li><a href="https://twitter.com/meg_nanimous" target="_blank"><img src="social_twitter.png" alt="twitter" height="40px" width="40px"></a></li>
+				<li><a href="https://de.linkedin.com/in/meghanfreas" target="_blank"><img src="social_linkedin.png" alt="linked in" height="40px" width="40px"></a></li>
+				<li><a href="http://instagram.com/megnanimouslyblog" target="_blank"><img src="social_instagram.png" alt="instagram" height="40px" width="40px"></a></li>
+				<li><a href="http://www.pinterest.com/megnanimously49/" target="_blank"><img src="social_pinterest.png" alt="pinterest height="40px" width="40px""></a></li>
+				<li><a href="http://megnanimous.yelp.de" target="_blank"><img src="social_yelp.png" alt="yelp" height="40px" width="40px"></a></li>
+				<li><a href="https://untappd.com/user/megnanimous" target="_blank"><img src="social_untappd.png" alt="untappd" height="40px" width="40px"></a></li>
 			</ul>
 			</div>
 			</div>
