Added Github button
Adjusted padding for #bottom li as needed

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 				<li><a href="https://twitter.com/meg_nanimous" target="_blank"><img src="social_twitter.png" alt="twitter" height="40px" width="40px"></a></li>
 				<li><a href="https://de.linkedin.com/in/meghanfreas" target="_blank"><img src="social_linkedin.png" alt="linked in" height="40px" width="40px"></a></li>
 				<li><a href="http://instagram.com/megnanimouslyblog" target="_blank"><img src="social_instagram.png" alt="instagram" height="40px" width="40px"></a></li>
+				<li><a href="https://github.com/megnanimous" target="_blank"><img src="social_github.png" alt="github" height="40px" width="40px"></a></li>
 				<li><a href="http://www.pinterest.com/megnanimously49/" target="_blank"><img src="social_pinterest.png" alt="pinterest height="40px" width="40px""></a></li>
 				<li><a href="http://megnanimous.yelp.de" target="_blank"><img src="social_yelp.png" alt="yelp" height="40px" width="40px"></a></li>
 				<li><a href="https://untappd.com/user/megnanimous" target="_blank"><img src="social_untappd.png" alt="untappd" height="40px" width="40px"></a></li>
