Added meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta name="title" content="Meghan Freas">
+	<meta name="description" content="The personal website of Meghan Freas.">
+	<meta charset="UTF-8">
+	<meta name="author" content="Meghan Freas">
+	<meta name="viewpoint" content="width=device-width">
 	<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 <title>Meghan Freas</title>
 </head>
